# laikago

./: README.md  README.txt
laikago/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
laikago/catkin_ws/src/laikago_ros/: ChangeLog  README.md
laikago/catkin_ws/src/laikago_ros/laikago_real/: CMakeLists.txt  package.xml
laikago/catkin_ws/src/laikago_ros/laikago_real/src/: position_mode.cpp  torque_mode.cpp  velocity_mode.cpp  walk_mode.cpp
laikago/laikago_sdk/: CMakeLists.txt  ChangeLog
laikago/laikago_sdk/examples/multi_pc/client/: udp_send_test.cpp
laikago/laikago_sdk/examples/multi_pc/server/: udp_recv_test.cpp
laikago/laikago_sdk/examples/one_pc/multi_process/server/: high_lcm_server.cpp  low_lcm_server.cpp
laikago/laikago_sdk/examples/one_pc/one_process/: position_example.cpp  torque_example.cpp  velocity_example.cpp  walk_example.cpp
laikago/laikago_sdk/include/laikago_sdk/: comm.hpp  laikago_sdk.hpp  loop.hpp
laikago/laikago_ws_old/: Makefile  position  position_mode.cpp  torque_mode.cpp  velocity_mode.cpp  walk_mode.cpp  walk_test  walk_test_mode.cpp
laikago/laikago_ws_old/libs/: Robot.h  laikago_comm.h
laikago/lcm-1.4.0/examples/c/: listener.c  send_message.c
laikago/lcm-1.4.0/examples/cpp/: Makefile  listener.cpp  read_log.cpp  send_message.cpp
laikago/xenomai-3.0.5/: Makefile  aclocal.m4  config.status  configure  libtool
laikago/xenomai-3.0.5/config/: Makefile  Makefile.in
laikago/xenomai-3.0.5/demo/: Makefile
laikago/xenomai-3.0.5/demo/alchemy/: Makefile  altency
laikago/xenomai-3.0.5/demo/posix/: Makefile
laikago/xenomai-3.0.5/doc/: Makefile  Makefile.in
laikago/xenomai-3.0.5/doc/asciidoc/: Makefile  Makefile.in
laikago/xenomai-3.0.5/doc/doxygen/: Makefile  Makefile.in  xeno3prm-common.conf  xeno3prm-html.conf  xeno3prm-latex.conf
laikago/xenomai-3.0.5/doc/gitdoc/: Makefile
laikago/xenomai-3.0.5/include/: Makefile  xeno_config.h
laikago/xenomai-3.0.5/include/alchemy/: Makefile
laikago/xenomai-3.0.5/include/boilerplate/: Makefile  Makefile.in
laikago/xenomai-3.0.5/include/cobalt/: Makefile
laikago/xenomai-3.0.5/include/copperplate/: Makefile
laikago/xenomai-3.0.5/include/mercury/: Makefile
laikago/xenomai-3.0.5/include/psos/: Makefile
laikago/xenomai-3.0.5/include/rtdm/: Makefile
laikago/xenomai-3.0.5/include/smokey/: Makefile
laikago/xenomai-3.0.5/include/trank/: Makefile
laikago/xenomai-3.0.5/include/vxworks/: Makefile
laikago/xenomai-3.0.5/include/xenomai/: Makefile
laikago/xenomai-3.0.5/lib/: Makefile
laikago/xenomai-3.0.5/lib/alchemy/: Makefile  libalchemy.la  libalchemy_la-alarm.lo  libalchemy_la-buffer.lo  libalchemy_la-cond.lo  libalchemy_la-event.lo  libalchemy_la-heap.lo  libalchemy_la-init.lo  (+7 more)
laikago/xenomai-3.0.5/scripts/: Makefile  xeno-config
laikago/xenomai-3.0.5/testsuite/: Makefile
laikago/xenomai-3.0.5/utils/: Makefile
(+549 files in other folders)
